--- a/maven-example/pom.xml
+++ b/maven-example/pom.xml
@@ -8,8 +8,8 @@
     <name>Simple Multi Modules Build</name>
 
     <modules>
-        <module>multi1</module>
-        <module>multi2</module>
+        <!--module>multi1</module>
+        <module>multi2</module-->
         <module>multi3</module>
     </modules>
 
