--- a/maven-example/multi3/pom.xml
+++ b/maven-example/multi3/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.jfrog.test</groupId>
         <artifactId>multi</artifactId>
-        <version>3.7-SNAPSHOT</version>
+        <version>1.0</version>
     </parent>
 
     <artifactId>multi3</artifactId>
