--- a/maven-example/pom.xml
+++ b/maven-example/pom.xml
@@ -3,13 +3,13 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.jfrog.test</groupId>
     <artifactId>multi</artifactId>
-    <version>3.7-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>pom</packaging>
     <name>Simple Multi Modules Build</name>
 
     <modules>
-        <!--module>multi1</module>
-        <module>multi2</module-->
+        <module>multi1</module>
+        <module>multi2</module>
         <module>multi3</module>
     </modules>
 
