--- a/maven-example/multi2/pom.xml
+++ b/maven-example/multi2/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.jfrog.test</groupId>
         <artifactId>multi</artifactId>
-        <version>1.0</version>
+        <version>version_tag_for_build</version>
     </parent>
 
     <properties>
@@ -12,7 +12,7 @@
     </properties>
 
     <artifactId>multi2</artifactId>
-    <version>1.0</version>
+    <version>version_tag_for_build</version>
     <packaging>jar</packaging>
     <name>Multi 2</name>
 
