--- a/maven-example/multi1/pom.xml
+++ b/maven-example/multi1/pom.xml
@@ -59,6 +59,11 @@
             <artifactId>plexus-utils</artifactId>
             <version>1.5.1</version>
         </dependency>
+         <dependency>
+            <groupId>org.codehaus.plexus</groupId>
+            <artifactId>plexus-utils</artifactId>
+            <version>2.0.5</version>
+        </dependency>
         <dependency>
             <groupId>javax.servlet.jsp</groupId>
             <artifactId>jsp-api</artifactId>
