--- a/maven-example/multi1/pom.xml
+++ b/maven-example/multi1/pom.xml
@@ -80,6 +80,19 @@
             <artifactId>spring-aop</artifactId>
             <version>2.5.6</version>
         </dependency>
+                <!-- shiro 使用 redis 作为缓存 -->
+        <dependency>
+            <groupId>org.crazycake</groupId>
+            <artifactId>shiro-redis</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+   
+        <!-- mybatis 使用 redis 作为缓存 -->
+        <dependency>
+            <groupId>org.mybatis.caches</groupId>
+            <artifactId>mybatis-redis</artifactId>
+            <version>1.0.0-beta2</version>
+          </dependency>
 
         <!-- dependency with classifier -->
         <dependency>
