--- a/maven-example/multi1/pom.xml
+++ b/maven-example/multi1/pom.xml
@@ -6,12 +6,12 @@
         <artifactId>multi</artifactId>
         <version>version_tag_for_build</version>
     </parent-->
-    <groupId>org.jfrog.test</groupId>  
+    <groupId>org.jfrog.common</groupId>  
     <version>version_tag_for_build</version>
     
-    <artifactId>multi1</artifactId>
+    <artifactId>jfrog-common</artifactId>
     <packaging>jar</packaging>
-    <name>Multi 1</name>
+    <name>JFrog common</name>
 
     <licenses>
         <license>
