--- a/maven-example/multi1/pom.xml
+++ b/maven-example/multi1/pom.xml
@@ -66,6 +66,11 @@
             <artifactId>plexus-utils</artifactId>
             <version>2.0.5</version>
         </dependency>
+         <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.45</version>
+        </dependency>
         <dependency>
             <groupId>javax.servlet.jsp</groupId>
             <artifactId>jsp-api</artifactId>
