--- a/maven-example/multi3/pom.xml
+++ b/maven-example/multi3/pom.xml
@@ -29,6 +29,11 @@
             <version>1.8.0.10</version>
             <scope>runtime</scope>
         </dependency>
+         <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.45</version>
+        </dependency>
 
         <!-- provided dependency -->
         <dependency>
